--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,157 @@ Green: #00B172
 White: #FFF
 
 */
+
+body{
+    font-family: 'Roboto', sans-serif;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
+#logo{
+    width: 210px;
+    margin-left: 20px;
+}
+
+nav{
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    background-color: white;
+    padding: 15px;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+#navbar{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: space-evenly;
+    width: 30%;
+    font-size: 1.25em;
+    margin-right: 20px;
+    font-weight: 400;
+    
+}
+
+#frontpage{
+    height: 800px;
+    background-image: url("/images/landing.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    width: 100%;
+}
+
+h1{
+    font-size: 5em;
+    margin: 10px 0;
+}
+
+#frontpage>p{
+    font-size: 1.5em;
+    text-align: center;
+}
+
+#features{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 600px;
+    width: 100%;
+}
+
+h2{
+    font-size: 3em;
+    border-bottom: 5px solid #00B172;
+}
+
+#features>div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+    padding: 40px;
+}
+
+.whatson{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#features h3{
+    font-size: 2em;
+    color: #00B172;
+}
+
+.whatson>p{
+    text-align: center;
+    font-size: 1.5em;
+    width: 70%;
+}
+
+.icon{
+    width: 150px;
+}
+
+#content{
+    background-image: url("/images/spotify-icon-white.png");
+    background-repeat: no-repeat;
+    background-size: 180px;
+    background-position: center center;
+    background-color: #00B172;
+    height: 900px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    margin: 0 20px 0 2%;
+}
+
+#greenbackground{
+    
+    width: 95%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#app{
+    width: 30%;
+    height: 70%;
+}
+
+#kaynewest{
+    width: 60%;
+    height: 90%;
+    color: white;
+}
+
+#kaynewest>h2{
+    text-decoration: underline;
+    text-underline-offset: 0.4em;
+}
+
+#kaynewest h3{
+    font-size: 1.5em;
+}
+
+#kaynewest article{
+    width: 60%;
+    font-size: 1.25em;
+}
